--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <p>Maze of Torment</p>
 
 <audio id="song">
-     <source src="C:\Users\Paul\Downloads\Morbid Angel\Albums & Singles\1989 - Altars Of Madness (Remastered 2003)\04 - Maze Of Torment.mp3" type="audio/mp3"> 
+     <source src="audio/Maze Of Torment.mp3" type="audio/mp3"> 
 </audio> 
 
 <input type="range" value="0" id="progress">
